# aster-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
aster_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  simple_server.py  spot_client.py  tools.py  v3_client.py
docs/: Aster-MCP外部对接文档.md
tests/: __init__.py
tests/unit/: test_config.py
