[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aster-mcp"
version = "0.1.0"
description = "Aster 期货交易所 MCP 服务 - 为 AI Agent 提供行情、交易、账户等工具"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aster MCP" }]
keywords = ["aster", "mcp", "trading", "futures", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "fastmcp>=0.1",
    "requests>=2.28",
    "cryptography>=41.0",
    "eth-account>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
aster-mcp = "aster_mcp.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aster_mcp*"]
